<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_android"
            app:shapeAppearanceOverlay="@style/circle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/as"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/samandar"
                    android:textColor="#90000000"
                    android:textSize="15sp" />

                <ImageView
                    android:contentDescription="@string/todo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_more_horiz_24" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/i_"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/img_android"
                app:shapeAppearanceOverlay="@style/rounded_corner" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:contentDescription="@string/todo"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="3dp"
                        android:src="@drawable/ic_baseline_chat_bubble_outline_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_4"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="3dp"
                        android:src="@drawable/ic_baseline_transform_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="3dp"
                        android:src="@drawable/ic_baseline_favorite_border_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_4"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="20dp"
                        android:contentDescription="@string/todo"
                        android:layout_height="20dp"
                        android:layout_marginEnd="3dp"
                        android:src="@drawable/ic_baseline_cloud_upload_24" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#B3B2B2"/>

</LinearLayout>